# PlutusAssetManager

./: .gitignore  CHANGELOG.md  PlutusAssetManager.cabal  README.md
app/: BurnAsset.hs  MintAsset.hs
keys/: asset-dept.addr  asset-dept.skey  asset-dept.vkey  collateral.addr  collateral.skey  collateral.vkey
scripts/: asset-minting-policy.plutus  asset-minting-tx.raw  asset-minting-tx.signed  burn-asset.sh  mint-asset.sh
src/Contracts/: AssetMintingPolicy.hs
