cabal-version:      2.4
name:               PlutusAssetManager
version:            1.1.0.0
synopsis:           A Cardano smart contract for managing assets
homepage:           https://github.com/shinynet/PlutusAssetManager
license:            MIT
author:             Devin Holloway
maintainer:         devin@shinynet.com
category:           Education
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:      Contracts.AssetMintingPolicy

    extensions:           DataKinds
                        , DeriveAnyClass
                        , DeriveGeneric
                        , FlexibleContexts
                        , GeneralizedNewtypeDeriving
                        , LambdaCase
                        , MultiParamTypeClasses
                        , NoImplicitPrelude
                        , OverloadedStrings
                        , RankNTypes
                        , RecordWildCards
                        , ScopedTypeVariables
                        , TemplateHaskell
                        , TypeApplications
                        , TypeFamilies
                        , TypeOperators

    build-depends:        base ^>=4.14.1.0
                        , aeson -any
                        , bytestring -any
                        , cardano-api -any
                        , containers -any
                        , data-default 
                        , freer-extras -any
                        , plutus-contract -any
                        , plutus-ledger -any
                        , plutus-ledger-api -any
                        , plutus-ledger-constraints -any
                        , plutus-script-utils
                        , plutus-tx -any
                        , plutus-tx-plugin -any
                        , text -any
                        , lens -any
                        , serialise

    hs-source-dirs:     src

    default-language:   Haskell2010

    ghc-options:        -Wall 
                        -fobject-code 
                        -fno-ignore-interface-pragmas 
                        -fno-omit-interface-pragmas 
                        -fno-strictness 
                        -fno-spec-constr 
                        -fno-specialise

executable mint-asset
    main-is:            MintAsset.hs

    build-depends:      base ^>=4.14.1.0
                      , PlutusAssetManager
                      , cardano-api -any
                      , plutus-ledger-api -any
                      , plutus-tx -any

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:    -main-is MintAsset
